# taa-backtest

./: .gitignore  HANDOFF.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
notes/: research_note.md  research_note_template.md
scripts/: make_figures.py  run_backtest.py
taa/: __init__.py
taa/backtest/: __init__.py  costs.py  engine.py
taa/construction/: __init__.py  base.py  black_litterman.py  policy.py  tilt.py
taa/data/: __init__.py  loaders.py  panel.py  snapshot.py  synthetic.py
taa/evaluation/: __init__.py  metrics.py  regimes.py  robustness.py
taa/signals/: __init__.py  base.py  carry.py  composite.py  macro.py  momentum.py  registry.py  value.py
tests/: test_black_litterman.py  test_carry_legs.py  test_costs.py  test_engine.py  test_loaders.py  test_no_lookahead.py  test_signals.py  test_snapshot.py  test_tilt.py  test_walk_forward.py
