[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "taa-backtest"
version = "0.1.0"
description = "Multi-asset tactical asset allocation backtesting framework (methods showcase)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "James Geraghty" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Real-data path (network); not needed for the offline demo or tests.
real = ["yfinance>=0.2", "pandas-datareader>=0.10"]
# Figures for the research note.
figures = ["matplotlib>=3.7"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["taa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
